First recipe page done

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-snowpink: #F9F5F5;
+  --color-mutedgrey: #b0a9a9;
   --color-chilired: #E53935;
   --breakpoint-xs: 25rem;
   --breakpoint-3xl: 112.5rem;
