--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,15 @@
   padding: 0;
 }
 
+:root {
+  --color-snowpink: #F9F5F5;
+  --color-mutedgrey: #b0a9a9;
+  --color-chilired: #E53935;
+  --breakpoint-xs: 25rem;
+  --breakpoint-3xl: 112.5rem;
+  --text-xxs: 0.6rem;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
